# biasguard

./: .env.example  .gitignore  GRAFANA_PROMETHEUS.md  LICENSE  Makefile  NOTES.md  README.md  __init__.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements-backend.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  streamlit-sanity.yml
agents/: analyzer_agent.py  mitigator_agent.py  orchestrator.py  retriever_agent.py  rewrite_utils.py  scorer_agent.py
api/: main.py  models.py
bias_db/: bias_db.py
bias_db/knowledge_base/: bias_patterns.json
config/: llm_router.py  settings.py
docker/: Dockerfile.api  Dockerfile.frontend  prometheus.yml
docker/grafana/dashboards/: LLM_Operations.json  Observability.json  provider.yml
docker/grafana/datasources/: prometheus.yml
frontend/: requirements.txt  streamlit_app.py
frontend/.streamlit/: secrets.toml  secrets.toml.example
monitoring/: phoenix_tracer.py  prometheus_metrics.py
presentation/: README.md  orchestrator.py  streamlit_app.py
scripts/: create_presentation.sh  deploy.sh  import_dashboards_to_latitude_grafana.sh
tests/integration/: test_api.py
tests/unit/: test_orchestrator.py  test_scorer.py
